// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-form/all fields Autocomplete 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-dropdown m--has-placeholder-icon"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Autocomplete
              </span>
               
              <sup
                aria-hidden="true"
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__placeholder-icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <input
                aria-activedescendant=""
                aria-autocomplete="both"
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                aria-required="true"
                autocomplete="new-password"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                readonly="readonly"
                required="required"
                role="button"
                type="text"
              />
               
              <!---->
               
            </div>
             
            <!---->
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Checkbox 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-checkbox m--is-checkbox-left"
  >
    <input
      aria-describedby="fakeId"
      class="m-checkbox__hidden"
      id="mCheckbox-fakeId"
      type="checkbox"
    />
     
    <label
      class="m-checkbox__wrap"
      for="mCheckbox-fakeId"
    >
      <span
        aria-hidden="true"
        class="m-checkbox__input"
      >
        <span
          class="m-checkbox__input__icon"
        />
      </span>
       
      <div
        class="m-checkbox__label"
      >
        Is active ?
      </div>
    </label>
     
    <div
      class="m-validation-message m-checkbox__message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Datepicker 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-label m--is-tag-default"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDatepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Birthdate
              </span>
               
              <sup
                aria-hidden="true"
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
                required="required"
              />
                
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Daterangepicker 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-periodpicker"
  >
    <div
      class="m-periodpicker__body"
    >
      <div
        class="m-periodpicker__item"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-datepicker"
          style="width: 100%; max-width: 136px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mDatepicker-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Du
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      aria-describedby="fakeId fakeId"
                      autocomplete="off"
                      id="mDatepicker-fakeId"
                      placeholder="AAAA-MM-JJ"
                    />
                      
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <button
                      aria-hidden="true"
                      class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                      style="width: 22px; height: 22px;"
                      tabindex="-1"
                      title="Ouvrir le calendrier"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-icon-button__icon"
                        height="20px"
                        width="20px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                       
                      <!---->
                    </button>
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
             
            <div
              class="m-popper m-popup"
            >
               
              <!---->
            </div>
             
            <!---->
          </div>
           
          <div
            class="m-validation-message m-datepicker__validation-message"
            id="fakeId"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-periodpicker__item"
        style="width: 100%; max-width: 136px;"
      >
        <div
          class="m-datepicker"
          style="width: 100%; max-width: 136px;"
        >
          <div
            class="m-input-style m--has-label m--is-tag-default"
          >
            <div
              class="m-input-style__main"
            >
              <div
                class="m-input-style__body"
              >
                <label
                  class="m-input-style__label"
                  for="mDatepicker-fakeId"
                  style="margin-right: 0px;"
                >
                  <span
                    class="m-input-style__text"
                  >
                    <span>
                      Au
                    </span>
                     
                    <!---->
                  </span>
                </label>
                 
                <div
                  class="m-input-style__input"
                >
                  <!---->
                   
                  <div
                    class="m-input-style__content"
                  >
                    <input
                      aria-describedby="fakeId fakeId"
                      autocomplete="off"
                      id="mDatepicker-fakeId"
                      placeholder="AAAA-MM-JJ"
                    />
                      
                  </div>
                   
                  <div
                    class="m-input-style__suffix"
                  >
                    <button
                      aria-hidden="true"
                      class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                      style="width: 22px; height: 22px;"
                      tabindex="-1"
                      title="Ouvrir le calendrier"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="m-icon m-icon-button__icon"
                        height="20px"
                        width="20px"
                      >
                        <!---->
                         
                        <use
                          aria-hidden="true"
                          class=""
                        />
                      </svg>
                       
                      <!---->
                    </button>
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
             
            <div
              class="m-popper m-popup"
            >
               
              <!---->
            </div>
             
            <!---->
          </div>
           
          <div
            class="m-validation-message m-datepicker__validation-message"
            id="fakeId"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-periodpicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Decimalfield 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-input-style m-decimalfield m--has-label m--is-tag-default"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDecimalfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Decimal
            </span>
             
            <sup
              aria-hidden="true"
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-decimalfield__input"
              id="mDecimalfield-fakeId"
              inputmode="decimal"
              required="required"
            />
              
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-decimalfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-decimalfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Dropdown 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Type
              </span>
               
              <sup
                aria-hidden="true"
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                aria-required="true"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                readonly="readonly"
                required="required"
                role="button"
                type="text"
              />
                
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Integerfield 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-input-style m-integerfield m--has-label m--is-tag-default"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mIntegerfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Integer
            </span>
             
            <sup
              aria-hidden="true"
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
             
            <input
              aria-describedby="fakeId"
              class="m-integerfield__input"
              id="mIntegerfield-fakeId"
              inputmode="decimal"
              required="required"
              type="number"
            />
              
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-integerfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-integerfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Multi Select 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listbox-fakeId"
    class="m-base-select"
    control-id="m-multi-select-fakeId"
    error-message=""
    input-max-width="288px"
    role="combobox"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-base-select__popup"
    >
      <div
        class="m-input-style m-multi-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
        style="width: 100%; max-width: 288px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-multi-select-fakeId"
              id="fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  La famille Von Trapp
                </span>
                 
                <sup
                  aria-hidden="true"
                  class="m-input-style__required-marker"
                >
                  *
                </sup>
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div
                  aria-activedescendant=""
                  aria-controls="listbox-fakeId"
                  aria-describedby="fakeId fakeId"
                  aria-haspopup="listbox"
                  aria-hidden="true"
                  aria-labelledby="fakeId"
                  aria-required="true"
                  class="m-multi-select__chips"
                  role="button"
                  tabindex="0"
                >
                  <input
                    aria-hidden="true"
                    readonly="readonly"
                    role="none"
                    tabindex="-1"
                    type="text"
                  />
                   
                  <div
                    aria-hidden="true"
                    class="m-multi-select__visually-hidden"
                    id="fakeId"
                  >
                    
                    Aucun élément sélectionné
                
                  </div>
                </div>
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow-icon"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-multi-select__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Radio 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <fieldset
    class="m-input-group m-radio-group"
  >
    <legend
      class="m-input-group__label"
      id="fakeId"
    >
      
        Style de coupe
        
      <!---->
       
      <!---->
    </legend>
     
    <div
      class="m-input-group__body"
    >
      <div
        class="m-validation-message m-input-group__message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        aria-describedby="fakeId"
        aria-labelledby="fakeId"
        class="m-input-group__content"
      >
         
        <ul
          class="m-radio-group__body"
          role="radiogroup"
        >
          <li
            class="m-radio"
          >
            <input
              class="m-radio__hidden"
              id="mRadio-fakeId"
              name="fakeId"
              type="radio"
              value="régulière"
            />
             
            <label
              class="m-radio__wrap"
              for="mRadio-fakeId"
            >
              <span
                aria-hidden="true"
                class="m-radio__input"
              />
               
              <span
                class="m-radio__label"
              >
                régulière
              </span>
            </label>
          </li>
          <li
            class="m-radio"
          >
            <input
              class="m-radio__hidden"
              id="mRadio-fakeId"
              name="fakeId"
              type="radio"
              value="julienne"
            />
             
            <label
              class="m-radio__wrap"
              for="mRadio-fakeId"
            >
              <span
                aria-hidden="true"
                class="m-radio__input"
              />
               
              <span
                class="m-radio__label"
              >
                julienne
              </span>
            </label>
          </li>
          <li
            class="m-radio"
          >
            <input
              class="m-radio__hidden"
              id="mRadio-fakeId"
              name="fakeId"
              type="radio"
              value="ondulé"
            />
             
            <label
              class="m-radio__wrap"
              for="mRadio-fakeId"
            >
              <span
                aria-hidden="true"
                class="m-radio__input"
              />
               
              <span
                class="m-radio__label"
              >
                ondulé
              </span>
            </label>
          </li>
        </ul>
      </div>
    </div>
  </fieldset>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Switchs 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-switch m--is-switch-left"
  >
    <input
      class="m-switch__hidden"
      id="switchfakeId"
      type="checkbox"
    />
     
    <label
      class="m-switch__body"
      for="switchfakeId"
    >
      <span
        aria-hidden="true"
        class="m-switch__input"
      >
        <span
          class="m-switch__button"
        />
         
        <span
          class="m-switch__text"
        >
          
                    Non
                
        </span>
      </span>
       
      <span
        class="m-switch__label"
      >
        État
      </span>
    </label>
     
    <div
      class="m-validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Textarea 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-input-style m-textarea m--has-label m--is-tag-default"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextarea-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Description Field
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <textarea
              aria-describedby="fakeId"
              class="m-textarea__input"
              id="mTextarea-fakeId"
              maxlength="Infinity"
              rows="1"
            />
             
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textarea__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textarea__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Textfield 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-input-style m-textfield m--has-label m--is-tag-default m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              text field
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;

exports[`Storyshots modul-components|m-form/all fields Timepicker 1`] = `
<form
  class="m-form mu-mt"
  novalidate="novalidate"
>
  <!---->
   
  <!---->
   
  <p>
    validationType =  on-going
  </p>
   
  <p>
    edition context: none
  </p>
   
  <span
    style="width: 300px; margin-bottom: 5px; border-bottom: 1px solid black; display: flex; padding-bottom: 10px;"
  />
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m-timepicker m--has-label m--is-tag-default"
      style="width: 100%; max-width: 136px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Time
              </span>
               
              <sup
                aria-hidden="true"
                class="m-input-style__required-marker"
              >
                *
              </sup>
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                required="required"
                step="300"
                type="text"
              />
                
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le sélecteur d'heure"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <p
    class="mu-mb-lg"
  >
    <button
      class="m-button m--is-skin-primary"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Submit 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m--is-skin-secondary"
      type="reset"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
</form>
`;
